--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.11.9",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.1.0",
+    "gh-pages": "^5.0.0",
     "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
